exam/k8s/api-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: sirius
spec:
  selector:
    app: api-service
  ports:
    - port: 8080
      targetPort: 8080
